@@ -1,6 +1,5 @@
-package com.product.app.utility;
+package com.flash_sale.app.utility;
 
-import java.io.InputStream;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.security.KeyFactory;
@@ -11,17 +10,10 @@ import java.util.Base64;
 public class KeyUtil {
 
     public static RSAPublicKey getPublicKey() throws Exception {
-        InputStream is = KeyUtil.class.getClassLoader().getResourceAsStream("keys/public.pem");
-        if (is == null) {
-            throw new IllegalArgumentException("Public key file not found in resources.");
-        }
-
-        String key = new String(is.readAllBytes())
-                .replace("-----BEGIN PUBLIC KEY-----", "")
+        String key = new String(Files.readAllBytes(Paths.get("src/main/resources/keys/public.pem")));
+        key = key.replace("-----BEGIN PUBLIC KEY-----", "")
                 .replace("-----END PUBLIC KEY-----", "")
-                .replaceAll("\\s+", "")
-                .trim();
-
+                .replaceAll("\\r?\\n", "");
         byte[] decoded = Base64.getDecoder().decode(key);
         X509EncodedKeySpec spec = new X509EncodedKeySpec(decoded);
         KeyFactory kf = KeyFactory.getInstance("RSA");
